@@ -1,5 +1,11 @@
 2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>
 
+	* Frameworks/StepTalk/STUndefinedObject.m (-forwardInvocation:):
+	Clear result buffer to prevent crashes under GNUstep when the
+	invoked method's result type is an object type.
+
+2011-01-20  Wolfgang Lux  <wolfgang.lux@gmail.com>
+
 	* Modules/AppKit/GNUmakefile: Add header.m and footer.m to
 	dependencies of %.list -> %.m rule.
 	* Modules/AppKit/header.m (STGet@@NAME@@): Use local variable to
